--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
               <input type="text" ng-model="restaurantName" class="form-control" placeholder="What's it called?" required>
               <input type="text" ng-model="restaurantCuisine" class="form-control" placeholder="What kind of food do they gots there?" required>
               <input type="text" ng-model="restaurantLocation" class="form-control" placeholder="Where is this place?" required>
+              <select ng-model="restaurantPriceRange" class="form-control">
+                <option value="">What's the price range?</option>
+                <option value="$">$</option>
+                <option value="$$">$$</option>
+                <option value="$$$">$$$</option>
+                <option value="$$$$">$$$$</option>
+                <option value="$$$$$">$$$$$</option>
+              </select>
             </div>
             <button type="submit" class="btn btn-default">Submit</button>
           </form>
@@ -34,7 +42,7 @@
         <h3 ng-show="restaurants.length">The Bestaurants</h3>
         <ul ng-show="restaurants.length">
           <li ng-repeat="item in restaurants">
-            Name: {{ item.name }}, Cuisine: {{ item.cuisine }}, Neighborhood: {{item.location}} <a ng-click="deleteRestaurant(item)">Delete</a>
+            Name: {{ item.name }}, Cuisine: {{ item.cuisine }}, Neighborhood: {{item.location}}, Price Range: {{item.priceRange}} <a ng-click="deleteRestaurant(item)">Delete</a>
           </li>
         </ul>
       </div>
