--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="jumbotron">
       <div  class="container">
         <h1>The Bestaurants</h1>
-        <h2>But only in Portland&hellip; specifically the one in Oregon.</h2>
+        <h2>&hellip; but only in Portland&hellip; specifically the one in Oregon.</h2>
       </div>
     </div>
     <div class="container" ng-controller="RestaurantsCtrl">
@@ -37,12 +37,21 @@
             <button type="submit" class="btn btn-default">Submit</button>
           </form>
       </div>
-
       <div class="col-md-6">
         <h3 ng-show="restaurants.length">The Bestaurants</h3>
         <ul ng-show="restaurants.length">
           <li ng-repeat="item in restaurants">
+            <span ng-click="editing = true" ng-hide="editing">
             Name: {{ item.name }}, Cuisine: {{ item.cuisine }}, Neighborhood: {{item.location}}, Price Range: {{item.priceRange}} <a ng-click="deleteRestaurant(item)">Delete</a>
+            </span>
+            <span class="form-group" ng-show="editing" ng-submit="editing = false">
+              <form class="form-inline" role="form">
+                <input type="text" class="form-control input-sm" ng-model="item.name" required/>
+                <input type="text" class="form-control input-sm" ng-model="item.cuisine" required/>
+                <input type="text" class="form-control input-sm" ng-model="item.location" required/>
+                <button class="btn btn-default btn-sm" type="submit">Save</button>
+              </form>
+            </span>
           </li>
         </ul>
       </div>
