--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
               <form class="form-inline" role="form" ng-repeat="item in restaurants | filter:query" ng-submit="editing = false">
                 <dt>
                   <span ng-click="editing = true" ng-hide="editing">
-                    {{item.name}}
+                    {{item.name}} <a ng-click="deleteRestaurant(item)">(Delete)</a>
                   </span>
                   <span class="form-group" ng-show="editing">
-                    <input type="text" class="form-control input-sm" ng-model="item.name" required/>
+                    <input type="text" class="form-control" ng-model="item.name" required/>
                   </span>
                 </dt>
                 <dd>
@@ -61,7 +61,7 @@
                     {{ item.cuisine }}
                   </span>
                   <span class="form-group" ng-show="editing">
-                    <input type="text" class="form-control input-sm" ng-model="item.cuisine" required/>
+                    <input type="text" class="form-control" ng-model="item.cuisine" required/>
                   </span>
                 </dd>
                 <dd>
@@ -69,7 +69,7 @@
                     {{ item.location }}
                   </span>
                   <span class="form-group" ng-show="editing">
-                    <input type="text" class="form-control input-sm" ng-model="item.location" required/>
+                    <input type="text" class="form-control" ng-model="item.location" required/>
                   </span>
                 </dd>
                 <dd>
